# Advent-of-Code-2022

day5/: CMakeLists.txt  Rearrangements.cpp  Rearrangements.h  main.cpp
day6/: CMakeLists.txt  main.cpp
